# web_hw_13_part_2

./: README.md  pyproject.toml
hw_10_django/: db.sqlite3
hw_10_django/app_auth/: forms.py  urls.py  views.py
hw_10_django/app_auth/templates/app_auth/: login.html  logout.html  register.html
hw_10_django/author/: urls.py  views.py
hw_10_django/author/templates/author/: index.html
hw_10_django/hw_10_django/: asgi.py  settings.py  urls.py  wsgi.py
hw_10_django/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_10_django/quotes/migrations/: 0001_initial.py
hw_10_django/quotes/scraping/: main.py  models.py  parser.py  seed.py
hw_10_django/quotes/scraping/data/: authors.json  quotes.json
hw_10_django/quotes/static/quotes/: style.css
hw_10_django/quotes/templates/quotes/: base.html  index.html  registerAuthor.html  registerQuote.html  registerTag.html  scraping.html
hw_10_django/quotes/templatetags/: extract.py
hw_10_django/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
